kube-znn/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-znn-db
  labels:
    app: kube-znn-db
spec:
  ports:
    - name: tcp
      port: 3306
  selector:
    app: kube-znn-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-znn-db
  labels:
    app: kube-znn-db
spec:
  selector:
    matchLabels:
      app: kube-znn-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kube-znn-db
    spec:
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-initdb
      serviceAccountName: kubeznn
      containers:
      - image: mysql:5.6
        name: mysql
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d
        livenessProbe:
          tcpSocket:
            port: 3306
        ports:
        - containerPort: 3306
      nodeSelector:
        localhost.k8s.io/layer: "db"
