kube-znn/kube-znn.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-znn
  labels:
    app: kube-znn
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: kube-znn
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-znn
  labels:
    app: kube-znn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-znn
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kube-znn
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9180"
    spec:
      serviceAccountName: kubeznn
      containers:
      - name: znn
        image: cmendes/znn:high
        imagePullPolicy: IfNotPresent
        readinessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost/news.php
          initialDelaySeconds: 1
          periodSeconds: 2
          failureThreshold: 5
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost/liveness.php
          initialDelaySeconds: 1
          periodSeconds: 1
          failureThreshold: 5
        ports:
        - name: http
          containerPort: 80
        - name: metrics
          containerPort: 9180
      nodeSelector:
        localhost.k8s.io/layer: "web"
