kube-znn/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-kube-znn
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "ingress-nginx.default.svc"
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-znn
          servicePort: 8080
